Convert Scientific MetaTasks to RatingScore and blueprint_issue1084
Changes:
- Scientific related FactoryMetaTasks converts to be blueprint
- TaskProbablityUtil as new method to extract Science associated with a Person's Job
- JobType cleaned up to use composite groupings
- Create UnitTest for JobType to check groupings

Part of #1084