@@ -7,6 +7,8 @@
 
 package com.mars_sim.core.person.ai.job.util;
 
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
 
 import com.mars_sim.tools.Msg;
@@ -37,23 +39,21 @@ public enum JobType {
 	TRADER				(Msg.getString("JobType.Trader")), //$NON-NLS-1$
 	;
 
-	
+	// Interals allows to be built is static initiaiser method
+	private static final Set<JobType> INTERNAL_ACA = new HashSet<>();
+	private static final Set<JobType> INTERNAL_INT = new HashSet<>();
+
 	/**
-	 * Those having an academic background.
+	 * Those having an academic background. This is a combination of
+	 * INTELLECTUALS and others
 	 */
-	public static final Set<JobType> ACADEMICS =
-				Set.of(JobType.AREOLOGIST,
-						JobType.ASTRONOMER,
-						JobType.BIOLOGIST,
-						JobType.BOTANIST,
-						JobType.CHEMIST,
-						JobType.COMPUTER_SCIENTIST,
-						JobType.DOCTOR,
-						JobType.ENGINEER,
-						JobType.MATHEMATICIAN,
-						JobType.METEOROLOGIST,
-						JobType.PHYSICIST,
-						JobType.PSYCHOLOGIST);
+	public static final Set<JobType> ACADEMICS = Collections.unmodifiableSet(INTERNAL_ACA);
+
+	/**
+	 * Those having an intellectuals background. This is a combination of
+	 * SCIENTISTS & MEDICS.
+	 */
+	public static final Set<JobType> INTELLECTUALS = Collections.unmodifiableSet(INTERNAL_INT);
 
 	/**
 	 * Those who are loaders.
@@ -81,13 +81,23 @@ public enum JobType {
 	 */
 	public static final Set<JobType> SCIENTISTS =
 				Set.of(JobType.AREOLOGIST,
-						JobType.ASTRONOMER,
 						JobType.BIOLOGIST,
 						JobType.BOTANIST,
 						JobType.CHEMIST,
 						JobType.COMPUTER_SCIENTIST,
 						JobType.PHYSICIST
 						);
+
+	static {
+		INTERNAL_INT.addAll(SCIENTISTS);
+		INTERNAL_INT.addAll(MEDICS);
+
+		INTERNAL_ACA.addAll(INTERNAL_INT);
+		INTERNAL_ACA.add(JobType.ASTRONOMER);
+		INTERNAL_ACA.add(JobType.ENGINEER);
+		INTERNAL_ACA.add(JobType.MATHEMATICIAN);
+		INTERNAL_ACA.add(JobType.METEOROLOGIST);
+	}
 
 	private String name;
 
